# ramp

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
src/: audio.rs  cache.rs  config.rs  decoder.rs  main.rs  player.rs  song.rs  tui.rs
src/player/: command.rs  facade.rs  loader.rs  mod.rs  playback.rs
src/tui/: fancy.rs  files.rs  log.rs  mod.rs  queue.rs  search.rs  song_table.rs  status.rs  tabs.rs
