[package]
name = "rcmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# general
itertools = "0.11.0"
log = "0.4.19"
simplelog = "0.12.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["unbounded_depth"] }
serde_stacker = "0.1.10"
walkdir = "2.3.3"

# tui
crossterm = "0.26.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }

# audio
cpal = "0.15.2"
symphonia = { version = "0.5.3", features = ["mp3"] }
souvlaki = "0.6.1"
tempfile = "3.7.1"
